@@ -1,0 +1,44 @@
+<%= render partial: 'contour/layouts/per_page', locals: { type: 'annuals', per_page: 20, object_count: @annual_count } %>
+
+<table class="table table-striped table-bordered" style="width:100%">
+  <thead>
+    <tr>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.user_id', 'User', 'annuals_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.applicant_id', 'Applicant', 'annuals_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.year', 'Year', 'annuals_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.coursework_completed', 'Coursework Completed', 'annuals_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.publications', 'Publications', 'annuals_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.presentations', 'Presentations', 'annuals_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.research_description', 'Research Description', 'annuals_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.source_of_support', 'Source Of Support', 'annuals_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.nih_other_support', 'Nih Other Support', 'annuals_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.nih_other_support_uploaded_at', 'Nih Other Support Uploaded At', 'annuals_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.submitted_at', 'Submitted At', 'annuals_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'annuals.modified_at', 'Modified At', 'annuals_search') %></th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+
+  <% @annuals.each do |annual| %>
+    <tr>
+      <td><%= link_to annual.user.name, annual.user if annual.user %></td>
+      <td><%= link_to annual.applicant.name, annual.applicant if annual.applicant %></td>
+      <td><%= annual.year %></td>
+      <td><%= annual.coursework_completed %></td>
+      <td><%= annual.publications %></td>
+      <td><%= annual.presentations %></td>
+      <td><%= annual.research_description %></td>
+      <td><%= annual.source_of_support %></td>
+      <td><%= annual.nih_other_support %></td>
+      <td><%= annual.nih_other_support_uploaded_at %></td>
+      <td><%= annual.submitted_at %></td>
+      <td><%= annual.modified_at %></td>
+      <td>
+        <%= link_to 'Edit', edit_annual_path(annual), class: 'btn btn-mini' %>
+        <%= link_to 'Delete', annual, method: :delete, class: 'btn btn-mini btn-danger', data: { confirm: "Are you sure you want to delete Annual #{annual.name}?" } %>
+      </td>
+    </tr>
+  <% end %>
+</table>
+
+<center><%= paginate @annuals %></center>
