@@ -1,0 +1,3 @@
+<% @title = "Edit Annual: #{@annual.name}" %>
+
+<%= render 'form' %>
