@@ -1,0 +1,1 @@
+$("#annuals").html("<%= escape_javascript(render("annuals")) %>");
