@@ -37,6 +37,8 @@
   </div>
 </div>
 
+<%= render partial: 'annuals/index', locals: { applicant: current_applicant } %>
+
 <% if false %>
 <div class="row">
   <div class="span6">
