@@ -1,5 +1,7 @@
 TrainingGrant::Application.routes.draw do
 
+  resources :annuals
+
   # devise_for :applicants, controllers: { registrations: 'contour/registrations', sessions: 'contour/sessions', passwords: 'contour/passwords' }, path_names: { sign_up: 'register', sign_in: 'login' }
   devise_for :applicants, path: 'as', path_names: { sign_up: 'register', sign_in: 'login' }
 
